app/src/main/java/humer/UvcCamera/JNA_I_LibUsb/JNA_I_LibUsb.java


    /**
     * VideoControl interface
     */
    @FieldOrder({"parent", "input_term_descs", "output_term_descs", "processing_unit_descs", "extension_unit_descs",
            "bcdUVC", "bEndpointAddress", "bInterfaceNumber"})
    public static class uvc_control_interface extends Structure {
        public static class ByReference extends uvc_control_interface implements Structure.ByReference {        }
        public static class ByValue extends uvc_control_interface implements Structure.ByValue {        }
        public uvc_device_info.ByReference parent;
        public uvc_input_terminal.ByReference input_term_descs;
        public uvc_output_terminal.ByReference output_term_descs;
        public uvc_processing_unit.ByReference processing_unit_descs;
        public uvc_extension_unit.ByReference extension_unit_descs;
        public short bcdUVC;
        public byte bEndpointAddress;
        /**
         * Interface number
         */
        public byte bInterfaceNumber;
    }

    @FieldOrder({"prev", "next", "bTerminalID", "wTerminalType", "wObjectiveFocalLengthMin",
            "wObjectiveFocalLengthMax", "wOcularFocalLength", "bmControls", "request"})
    public static class uvc_input_terminal extends Structure {
        public static class ByReference extends uvc_input_terminal implements Structure.ByReference {        }
        public uvc_input_terminal.ByReference prev, next;
        /**
         * Index of the terminal within the device
         */
        public byte bTerminalID;
        /**
         * Type of terminal (e.g., camera)
         */
        public int wTerminalType;
        public short wObjectiveFocalLengthMin;
        public short wObjectiveFocalLengthMax;
        public short wOcularFocalLength;
        /**
         * Camera controls (meaning of bits given in {uvc_ct_ctrl_selector})
         */
        public long bmControls;
        /**
         * request code(wIndex)
         */
        public short request;
    }
    /**
     * Representation of the interface that brings data into the UVC device
     */
    @FieldOrder({"prev", "next", "bTerminalID", "wTerminalType",
            "bAssocTerminal", "bSourceID", "iTerminal", "request"})
    public static class uvc_output_terminal extends Structure {
        public static class ByReference extends uvc_output_terminal implements Structure.ByReference {        }
        uvc_output_terminal.ByReference prev, next;
        /** @todo */
        /**
         * Index of the terminal within the device
         */
        public byte bTerminalID;
        /**
         * Type of terminal (e.g., camera)
         */
        public int wTerminalType;
        public short bAssocTerminal;
        public byte bSourceID;
        public byte iTerminal;
        /**
         * request code(wIndex)
         */
        public short request;
    }

    /**
     * Representation of the interface that brings data into the UVC device
     */
    @FieldOrder({"prev", "next", "bUnitID", "bSourceID", "bmControls", "request"})
    public static class uvc_processing_unit extends Structure {
        public static class ByReference extends uvc_processing_unit implements Structure.ByReference {        }
        public uvc_processing_unit.ByReference prev, next;
        /**
         * Index of the processing unit within the device
         */
        public byte bUnitID;
        /**
         * Index of the terminal from which the device accepts images
         */
        public byte bSourceID;
        /**
         * Processing controls (meaning of bits given in {uvc_pu_ctrl_selector})
         */
        public long bmControls;
        /**
         * request code(wIndex)
         */
        public short request;
    }

    /**
     * Representation of the interface that brings data into the UVC device
     */
    @FieldOrder({"prev", "next", "bUnitID", "guidExtensionCode", "bmControls", "request"})
    public static class uvc_extension_unit extends Structure {
        public static class ByReference extends uvc_extension_unit implements Structure.ByReference {        }
        public uvc_extension_unit.ByReference prev, next;
        /**
         * Index of the extension unit within the device
         */
        public byte bUnitID;
        /**
         * GUID identifying the extension unit
         */
        public byte[] guidExtensionCode = new byte[16];
        /**
         * Bitmap of available controls (manufacturer-dependent)
         */
        public long bmControls;
        /**
         * request code(wIndex)
         */
        public short request;
    }

    @FieldOrder({"parent", "prev", "next", "bInterfaceNumber", "format_descs",
            "bEndpointAddress", "bTerminalLink", "bmInfo", "bStillCaptureMethod", "bTriggerSupport", "bTriggerUsage", "bmaControls"})
    public static class uvc_streaming_interface extends Structure {
        public static class ByReference extends uvc_streaming_interface implements Structure.ByReference {        }
        public static class ByValue extends uvc_streaming_interface implements Structure.ByValue {        }
        public uvc_device_info.ByReference parent;
        public uvc_streaming_interface.ByReference prev, next;
        /**
         * Interface number
         */
        public byte bInterfaceNumber;
        /**
         * Video formats that this interface provides
         */
        public uvc_format_desc.ByReference format_descs;
        /**
         * USB endpoint to use when communicating with this interface
         */
        public byte bEndpointAddress;
        public byte bTerminalLink;
        public byte bmInfo;    // XXX
        public byte bStillCaptureMethod;    // XXX
        public byte bTriggerSupport;    // XXX
        public byte bTriggerUsage;    // XXX
        public long bmaControls;    // XXX
    }

    @FieldOrder({"parent", "prev", "next", "bDescriptorSubtype", "bFormatIndex", "bNumFrameDescriptors",
            "formatSpecifier", "formatSpecificData",
            "bDefaultFrameIndex", "bAspectRatioX", "bAspectRatioY",
            "bmInterlaceFlags", "bCopyProtect", "bVariableSize", "frame_descs"})
    public static class uvc_format_desc extends Structure {
        public static class ByReference extends uvc_format_desc implements Structure.ByReference {        }
        public static class ByValue extends uvc_format_desc implements Structure.ByValue {        }

        public uvc_streaming_interface.ByReference parent;
        public uvc_format_desc.ByReference prev;
        public uvc_format_desc.ByReference next;
        public int bDescriptorSubtype;
        public byte bFormatIndex;
        public byte bNumFrameDescriptors;

        public FormatSpecifier formatSpecifier;
        public FormatSpecificData formatSpecificData;

        public byte bDefaultFrameIndex;
        public byte bAspectRatioX;
        public byte bAspectRatioY;
        public byte bmInterlaceFlags;
        public byte bCopyProtect;
        public byte bVariableSize;

        public uvc_frame_desc.ByReference frame_descs;
    }

    public static class FormatSpecifier extends Union {
        public byte[] guidFormat = new byte[16];
        public byte[] fourccFormat = new byte[4];
    }

    /**
     * Format-specific data
     */

    public static  class FormatSpecificData extends Union {
        /**
         * BPP for uncompressed stream
         */
        public byte bBitsPerPixel;
        /**
         * Flags for JPEG stream
         */
        public byte bmFlags;
    }

    @FieldOrder({"parent", "prev", "next", "bDescriptorSubtype", "bFrameIndex", "bmCapabilities",
            "wWidth", "wHeight", "dwMinBitRate", "dwMaxBitRate", "dwMaxVideoFrameBufferSize", "dwDefaultFrameInterval",
            "dwMinFrameInterval", "dwMaxFrameInterval", "dwFrameIntervalStep", "bFrameIntervalType", "dwBytesPerLine", "intervals"})
    public static class uvc_frame_desc extends Structure {
        public static class ByReference extends uvc_frame_desc implements Structure.ByReference {        }
        public static class ByValue extends uvc_frame_desc implements Structure.ByValue {        }
        public uvc_format_desc.ByReference parent;
        public uvc_frame_desc.ByReference prev, next;
        /**
         * Type of frame, such as JPEG frame or uncompressed frme
         */
        public int bDescriptorSubtype;
        /**
         * Index of the frame within the list of specs available for this format
         */
        public byte bFrameIndex;
        public byte bmCapabilities;
        /**
         * Image width
         */
        public short wWidth;
        /**
         * Image height
         */
        public short wHeight;
        /**
         * Bitrate of corresponding stream at minimal frame rate
         */
        public int dwMinBitRate;
        /**
         * Bitrate of corresponding stream at maximal frame rate
         */
        public int dwMaxBitRate;
        /**
         * Maximum number of bytes for a video frame
         */
        public int dwMaxVideoFrameBufferSize;
        /**
         * Default frame interval (in 100ns units)
         */
        public int dwDefaultFrameInterval;
        /**
         * Minimum frame interval for continuous mode (100ns units)
         */
        public int dwMinFrameInterval;
        /**
         * Maximum frame interval for continuous mode (100ns units)
         */
        public int dwMaxFrameInterval;
        /**
         * Granularity of frame interval range for continuous mode (100ns)
         */
        public int dwFrameIntervalStep;
        /**
         * Frame intervals
         */
        public byte bFrameIntervalType;
        /**
         * number of bytes per line
         */
        public int dwBytesPerLine;
        /**
         * Available frame rates, zero-terminated (in 100ns units)
         */
        public Pointer intervals;
    }

    @FieldOrder({"bmHint", "bFormatIndex", "bFrameIndex", "dwFrameInterval", "wKeyFrameRate", "wPFrameRate",
            "wCompQuality", "wCompWindowSize", "wDelay", "dwMaxVideoFrameSize", "dwMaxPayloadTransferSize", "dwClockFrequency",
            "bmFramingInfo", "bPreferedVersion", "bMinVersion", "bMaxVersion",
            "bUsage", "bBitDepthLuma", "bmSettings", "bMaxNumberOfRefFramesPlus1", "bmRateControlModes", "bmLayoutPerStream", "bInterfaceNumber"})
    public static class uvc_stream_ctrl extends Structure {
        public static class ByReference extends uvc_stream_ctrl implements Structure.ByReference {        }
        public static class ByValue extends uvc_stream_ctrl implements Structure.ByValue {        }
        public short bmHint;
        public byte bFormatIndex;
        public byte bFrameIndex;
        public int dwFrameInterval;
        public short wKeyFrameRate;
        public short wPFrameRate;
        public short wCompQuality;
        public short wCompWindowSize;
        public short wDelay;
        public int dwMaxVideoFrameSize;
        public int dwMaxPayloadTransferSize;
        /** XXX add UVC 1.1 parameters */
        public int dwClockFrequency;
        public byte bmFramingInfo;
        public byte bPreferedVersion;
        public byte bMinVersion;
        public byte bMaxVersion;
        /** XXX add UVC 1.5 parameters */
        public byte bUsage;
        public byte bBitDepthLuma;
        public byte bmSettings;
        public byte bMaxNumberOfRefFramesPlus1;
        public short bmRateControlModes;
        public long bmLayoutPerStream;
        //
        public byte bInterfaceNumber;
    }

    public static class size_t extends IntegerType {
        public static final size_t ZERO = new size_t();
        private static final long serialVersionUID = 1L;
        public size_t() { this(0); }
        public size_t(long value) { super(Native.SIZE_T_SIZE, value, true); }
    }
